# attrax

./: README.md
esp32-espidf/: attrax.ino  platformio.ini
esp32-espidf/src/: ST77916.h
esp32/src/: ST77916.cpp
raspi-ros2-src/: 1.txt  parse_robot_params.cpp  readme.md  serial_driver.cpp
raspi-ros2-src/hightorque_robot/: CMakeLists.txt  package.xml
raspi-ros2-src/hightorque_robot/examples/: 0_robot_get_state.cpp  0_robot_set_zero.cpp  1_PD_control.cpp  1_PosVel_control.cpp  2_joint_impedance_control.cpp  3_cartesian_impedance_control.cpp  cartesian_impedance_ab_motion.cpp  pure_cartesian_impedance_control.cpp
raspi-ros2-src/hightorque_robot/include/: parse_robot_params.hpp
raspi-ros2-src/hightorque_robot/include/panthera/: Panthera.hpp
raspi-ros2-src/hightorque_robot/robot_param/: Follower.yaml  Leader.yaml
raspi-ros2-src/hightorque_robot/robot_param/motor_param/: 6dof_Panthera_params_follower.yaml
raspi-ros2-src/hightorque_robot/src/hardware/: robot.cpp
raspi-ros2-src/hightorque_robot/src/panthera/: Panthera.cpp
raspi-ros2-src/panthera_arm_control/: CMakeLists.txt  package.xml
raspi-ros2-src/panthera_arm_control/launch/: arm_control.launch.py  pose_record_replay.launch.py  wasd_tip_teleop.launch.py
raspi-ros2-src/panthera_arm_control/src/: arm_control_node.cpp  pose_record_replay.cpp  wasd_tip_teleop.cpp
raspi-ros2-src/panthera_bringup/: CMakeLists.txt  package.xml
raspi-ros2-src/panthera_bringup/config/: ros2_controllers.yaml
raspi-ros2-src/panthera_bringup/launch/: headless_demo.launch.py  robot.launch.py  robot.launch.xml
raspi-ros2-src/panthera_bringup/scripts/: headless_arm_motion_demo.py
raspi-ros2-src/panthera_commander/: CMakeLists.txt  README_sin_trajectory.md  package.xml
raspi-ros2-src/panthera_commander/launch/: commander.launch.xml  test_cartesian.launch.xml  test_cartesian_from_pose1.launch.xml
raspi-ros2-src/panthera_commander/src/: commander_template.cpp  draw_circle.cpp  draw_horizontal_vertical_circles.cpp  draw_three_circles.cpp  sin_trajectory_control.cpp  sin_trajectory_moveit.cpp  test_cartesian_from_pose1.cpp  test_gripper.cpp  test_gripper_detailed.cpp  test_moveit.cpp  test_moveit_by_cartesian.cpp  test_moveit_by_jointspace.cpp  test_moveit_by_siyuanshu.cpp
raspi-ros2-src/panthera_gazebo/: CMakeLists.txt  package.xml
raspi-ros2-src/panthera_gazebo/config/: gazebo_ros2_control.xacro  ros2_controllers.yaml
raspi-ros2-src/panthera_gazebo/launch/: gazebo.launch.py  gazebo.launch.xml  gazebo_classic.launch.py  gazebo_moveit.launch.py  gazebo_moveit.launch.xml
raspi-ros2-src/panthera_gazebo/urdf/: Panthera-HT_gazebo.urdf.xacro  Panthera-HT_gazebo_classic.urdf.xacro  gazebo.xacro  gazebo_classic.xacro
raspi-ros2-src/panthera_gazebo/worlds/: empty.world
raspi-ros2-src/panthera_hardware/: CMakeLists.txt  package.xml  panthera_hardware.xml
raspi-ros2-src/panthera_hardware/config/: panthera_hardware.ros2_control.xacro  ros2_controllers.yaml
raspi-ros2-src/panthera_hardware/include/panthera_hardware/: panthera_hardware_interface.hpp
raspi-ros2-src/panthera_hardware/launch/: panthera_hardware.launch.py
raspi-ros2-src/panthera_hardware/src/: panthera_hardware_interface.cpp
raspi-ros2-src/panthera_ht_description_with_finger/: CMakeLists.txt  package.xml
raspi-ros2-src/panthera_ht_description_with_finger/config/: joint_names_Panthera-HT_description_with_finger.yaml
raspi-ros2-src/panthera_ht_description_with_finger/launch/: display.launch  gazebo.launch
raspi-ros2-src/panthera_ht_description_with_finger/meshes/: link1.STL  link4.STL  link5.STL
raspi-ros2-src/panthera_ht_description_with_finger/urdf/: Panthera-HT_description_with_finger.csv  Panthera-HT_description_with_finger.urdf.xacro
raspi-ros2-src/panthera_interfaces/: CMakeLists.txt  package.xml
raspi-ros2-src/panthera_interfaces/msg/: ArmStatus.msg  EndPoseEuler.msg  PosCmd.msg
raspi-ros2-src/panthera_interfaces/srv/: Enable.srv  GoZero.srv  GripperControl.srv  GripperSrv.srv  MoveToJoint.srv  MoveToPose.srv
raspi-ros2-src/with_gripper_config/: .setup_assistant  CMakeLists.txt  package.xml
raspi-ros2-src/with_gripper_config/config/: Panthera-HT_description.ros2_control.xacro  Panthera-HT_description.srdf  Panthera-HT_description.urdf.xacro  Panthera-HT_description_hardware.ros2_control.xacro  Panthera-HT_description_hardware.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ros2_controllers_hardware.yaml
raspi-ros2-src/with_gripper_config/launch/: demo.launch.py  hardware.launch.py  hardware_moveit.launch.py  hardware_moveit_rviz.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
raspi-ros2-src/with_gripper_config/robot_param/: Follower_absolute.yaml
