<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panthera_arm_control</name>
  <version>0.0.0</version>
  <description>Panthera HT arm control via ROS2 topics and services (direct SDK driver)</description>
  <maintainer email="153282466@qq.com">tk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hightorque_robot</depend>
  <depend>ament_index_cpp</depend>
  <depend>example_interfaces</depend>
  <depend>panthera_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_kdl</depend>
  <depend>panthera_ht_description_with_finger</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
